snapshots/syntax/library/statements/lset/lset_at_module_level.snap
---
source: src/syntax/library/statements/lset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: LSetStatement
      children:
        - kind: LSetKeyword
          text: LSet
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: myVar
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: StringLiteral
          text: "\"Test\""
        - kind: Newline
          text: "\n"
