snapshots/syntax/library/statements/lset/lset_preserves_whitespace.snap
---
source: src/syntax/library/statements/string_manipulation/lset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Whitespace
      text: "    "
    - kind: LSetStatement
      children:
        - kind: LSetKeyword
          text: LSet
        - kind: Whitespace
          text: "    "
        - kind: Identifier
          text: myStr
        - kind: Whitespace
          text: "    "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: "    "
        - kind: StringLiteral
          text: "\"Text\""
        - kind: Whitespace
          text: "    "
        - kind: Newline
          text: "\n"
